@@ -1,4 +1,4 @@
-Welcome to PowerMax for Splunk 3.1!
+Welcome to PowerMax for Splunk 3.2!
 ===================================
 
 | |Maintenance| |OpenSource| |AskUs| |Test| |Build| |Docs|
@@ -32,11 +32,11 @@ The TA and App can be downloaded from the links below:
 Version Info
 ------------
 +---------------------------------+----------------------------------------+
-| **PowerMax for Splunk**         | 3.1                                    |
+| **PowerMax for Splunk**         | 3.2                                    |
 +---------------------------------+----------------------------------------+
-| **Technology Add-On**           | 3.1.0.0                                |
+| **Technology Add-On**           | 3.2.0.0                                |
 +---------------------------------+----------------------------------------+
-| **App**                         | 3.1.0.0                                |
+| **App**                         | 3.2.0.0                                |
 +---------------------------------+----------------------------------------+
 | **Minimum Unisphere Version**   | 9.2.0.0                                |
 +---------------------------------+----------------------------------------+
