@@ -4,7 +4,6 @@
 
 [install]
 is_configured = 0
-install_source_checksum = e6329eeacb6ec84b5981efb891e6695238333a63
 
 [ui]
 is_visible = 1
@@ -12,8 +11,8 @@ label = Dell EMC PowerMax App for Splunk Enterprise
 
 [launcher]
 author = Philip Sheehan
-description = Adds sample front-end Splunk UI dashboard support for Dell EMC PowerMax arrays. Note, the PowerMax for Splunk 3.1 Add-On must be installed for this app to work correctly.
-version = 3.1.0
+description = Adds sample front-end Splunk UI support for Dell EMC PowerMax arrays. Note, the PowerMax for Splunk 3.2 Add-On must be installed for this app to work correctly.
+version = 3.2.0
 
 [package]
 id = Dell-EMC-app-VMAX
