@@ -44,11 +44,11 @@ for both code can be viewed and downloaded from the links below:
 Version Info
 ------------
 +---------------------------------+----------------------------------------+
-| **PowerMax for Splunk**         | 3.1                                    |
+| **PowerMax for Splunk**         | 3.2                                    |
 +---------------------------------+----------------------------------------+
-| **Technology Add-On**           | 3.1.0.0                                |
+| **Technology Add-On**           | 3.2.0.0                                |
 +---------------------------------+----------------------------------------+
-| **App**                         | 3.1.0.0                                |
+| **App**                         | 3.2.0.0                                |
 +---------------------------------+----------------------------------------+
 | **Minimum Unisphere Version**   | 9.2.0.0                                |
 +---------------------------------+----------------------------------------+
